--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yashoda",
+  "homepage": "https://github.com/Khansalman786/Yashoda-IVF-Web.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.2",
     "@mui/styled-engine-sc": "^6.4.2",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.8",
     "next": "^15.1.6",
